# eyeROV-Assignment

./: README.md
interface/: CMakeLists.txt  package.xml
sensor_interface/: package.xml  setup.py
sensor_interface/scripts/: sensor_simulator.py
sensor_interface/sensor_interface/: sensor_node.py
sensor_interface_cpp/: CMakeLists.txt  package.xml
sensor_interface_cpp/src/: sensor_node.cpp
